--- a/localization/jpn/AigisMod-Event-Strings.json
+++ b/localization/jpn/AigisMod-Event-Strings.json
@@ -24,10 +24,10 @@
       "あなたは神殿を出て冒険を続けた。"
     ],
     "OPTIONS": [
-      "[寄付]  #b100ゴールドを捧げ、 レリック を 手に入れる。",
-      "[祈る] #gカードを1枚アップグレードする。",
-      "[召喚] #g20枚のカードの中から、デッキに1枚加える。",
-      "[離れる]",
+      "[寄付] #b100 #gゴールドを捧げ、 レリックを 手に入れる。",
+      "[祈る] #gカードを #b1 #g枚アップグレードする。",
+      "[召喚] #b20 #g枚のカードの中から、デッキに #b1 #g枚加える。",
+      "[立ち去る]",
       "デッキに加えるカードを一枚選ぶ",
       "[LOCKED] あなたは十分なゴールド(100)を持っていない。",
       "[LOCKED] アップグレードできるカードを持っていない。",
@@ -44,10 +44,10 @@
       "あなたは戦いの後、新たな力に目覚めた"
     ],
     "OPTIONS": [
-      "[再編] #gカードを1枚デッキに加える。",
-      "[訓練] #gカードを一枚アップグレードする",
+      "[再編] #gカードを #b1 #g枚デッキに加える。",
+      "[訓練] #gカードを #b1 #g枚アップグレードする。",
       "[模擬戦] #r王子と戦う。",
-      "[Leave]",
+      "[立ち去る]",
       "[LOCKED] アップグレードできるカードを持っていない。",
       "アップグレードするカードを1枚選ぶ。",
       "[覚醒] #gレリックを手に入れる。"
@@ -57,8 +57,8 @@
   "aigisMod:CursedGem": {
     "NAME": "呪いの宝石",
     "DESCRIPTIONS": [
-      "あなたの目の前には死体があり、不思議な宝石を持っている。 NL また、ほかには黄金の宝箱がある。あなたは宝石から何らかの力を感じながらも宝箱にも興味をひかれています。",
-      "宝石を手に取ると、それが呪われた教団由来のものであることがわかった。あなたにはそれを保管する義務がありますが、その力は役に立つかもしれない。"
+      "あなたの目の前には死体があり、その手には不思議な宝石が握られていた。 NL また、ほかには黄金の宝箱がある。あなたは宝石から何らかの力を感じながらも宝箱にも興味をひかれている。",
+      "宝石を手に取ると、それが呪われた教団由来のものであることがわかった。あなたはそれを守らなくてはいけないが、その力はなにか役に立つかもしれない。",
       "やっぱりモンスターだった！"
     ],
     "OPTIONS": [
@@ -74,12 +74,12 @@
       "フロアを移動していると突然体の感覚がなくなり、声が聞こえ始めた…。",
       "あなたはインスピレーションを受け、なぜか強くなったように感じた。",
       "自分の中に馴染みのある力を感じる。",
-      "もっと気付いてほしい"
+      "もっと耳を傾けてほしい"
     ],
     "OPTIONS": [
-      "[星?] #g最大HP +8",
+      "[星?] #g最大HP+8",
       "[団長?] #gレリックを手に入れる",
-      "[起きる] 離れる"
+      "[起きる] 立ち去る"
     ]
   }
 }
