--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -373,13 +373,13 @@
     "NAME": "大爪デシウス",
     "FLAVOR": "「――嗚呼、星の声が聞こえる。何と美しい、調べなのだろうか……。」-デシウス",
     "DESCRIPTIONS": [
-      "#pアーマードデシウス と置き換えるる。 デッキに大爪形態を #b1 枚 追加する。",
+      "#pアーマードデシウス と置き換える。 デッキに大爪形態を #b1 枚 追加する。",
       "1マップに1回、 HP が #b0 になった時 #b35 HP を得る。 "
     ]
   },
   "aigisMod:MeteorSword": {
     "NAME": "奥義 天招流星剣",
-    "FLAVOR": "「これが奥義か……！　流星を降らすとはひ、卑怯すぎる……。」-デシウス",
+    "FLAVOR": "「これが奥義か……！　流星を降らすとは　ひ、卑怯すぎる……。」-デシウス",
     "DESCRIPTIONS": [
       "戦闘開始時、 #b6 ダメージの #y流星 #b1 を 生成する。",
       "カードで #y生成 する #y流星 が #b1 ダメージ増加する。"
@@ -412,7 +412,7 @@
     "NAME": "爆砕強化の秘術",
     "FLAVOR": "「魔力の精髄を極めること それが私の使命です。」-ガラニア",
     "DESCRIPTIONS": [
-      "戦闘開始時、敵が ＃2 体以上の時、 #y流星 #b1 を #y生成 する。",
+      "戦闘開始時、敵が #2 体以上の時、 #y流星 #b1 を #y生成 する。",
       " 戦闘中敵が追加された時、 #y流星 #b1 を #y生成 する。"
     ]
   },
@@ -420,7 +420,7 @@
     "NAME": "怪力爆砕鉄球",
     "FLAVOR": "「鎧のせいかな…筋肉が疲れてるみたいだ。」-ディーナ",
     "DESCRIPTIONS": [
-      "あなたのターン終了時、 あなたの #yブロック が #b16 以上の場合、すべての敵に #b10 ダメージをあたる。"
+      "あなたのターン終了時、 あなたの #yブロック が #b16 以上の場合、すべての敵に #b10 ダメージを与える。"
     ]
   },
   "aigisMod:SealRelease": {
@@ -434,7 +434,7 @@
     "NAME": "不屈の叛逆者",
     "FLAVOR": "「千年如きでは、人の愚かしさも、優しさも変わらないということか。」-シャディア",
     "DESCRIPTIONS": [
-      "プレイヤーの #b5 ターン目終了時、 #yHP ダメージを受けていない場合、すべての敵に #b50ダメージを与える。"
+      "プレイヤーの #b5 ターン目終了時まで、 #yHP ダメージを受けていない場合、すべての敵に #b50 ダメージを与える。"
     ]
   },
   "aigisMod:HolyAura": {
@@ -442,7 +442,7 @@
     "FLAVOR": "「人の気持ちが、私にもまだ残っていたなんて……」-ユリナ",
     "DESCRIPTIONS": [
       "#yダーク #yファイター カードを保留する。",
-      "#b4 ターン目終了時、 #b10 #yブロック を得る。"
+      " #b4 ターン目終了時、 #b10 #yブロック を得る。"
     ]
   },
   "aigisMod:HotSands": {
