--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -261,7 +261,7 @@
   "UndeadWorldAction": {
     "TEXT": [
       "手札に加えるアンデット1枚を選ぶ", 
-      "廃棄山にアンデッドカードかない…"
+      "廃棄山にアンデッドカードがない…"
     ]
   },
 
