--- a/localization/jpn/AigisMod-Monster-Strings.json
+++ b/localization/jpn/AigisMod-Monster-Strings.json
@@ -102,20 +102,20 @@
     ]
   },
   "aigisMod:GoldenMimic": {
-    "NAME": "Golden Mimic",
+    "NAME": "ゴールデンミミック",
     "MOVES": [
-      "Bite",
-      "Escape"
+      "噛みつき",
+      "逃走"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Prince": {
-    "NAME": "Prince",
+    "NAME": "王子",
     "MOVES": [
-      "Raise Morale",
-      "Sacred Treasure of Aigis",
+      "士気高揚",
+      "アイギスの神器",
       ""
     ],
     "DIALOG": [
@@ -123,10 +123,10 @@
     ]
   },
   "aigisMod:Anna": {
-    "NAME": "Anna",
+    "NAME": "アンナ",
     "MOVES": [
-      "Artillery Support",
-      "Full power support"
+      "砲撃サポート",
+      "全力サポート"
     ],
     "DIALOG": [
       ""
