--- a/localization/jpn/AigisMod-Orb-Strings.json
+++ b/localization/jpn/AigisMod-Orb-Strings.json
@@ -1,11 +1,11 @@
 {
   "aigisMod:MeteorOrb": {
-    "NAME": "Meteor Orb",
+    "NAME": "流星オーブ",
     "DESCRIPTION": [
-      "#yPassive: When you play a #yMeteor card, increase the damage of this orb by the cost of the played card, then deal #b",
-      " damage to a random enemy.",
-      " NL #yEvoke: Deal #b",
-      " damage to a random enemy."
+      "#y自動効果: #y流星 カードをプレイした時、このオーブのダメージはコスト分上昇し、 ランダムな敵に #b",
+      " ダメージを与える。",
+      " NL #y解放: ランダムな敵に #b",
+      "ダメージを与える。"
     ]
   }
 }
