--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -397,7 +397,7 @@
     "NAME": "シールドブレス",
     "FLAVOR": "「闇に堕ちた剣とて、輝きを守護することはできましょう。」-ヘイオス",
     "DESCRIPTIONS": [
-      "#yダーク #yファイター をプレイした時、 #yトゲ #b1 を得る。",
+      "#y暗黒 #y騎士 をプレイした時、 #yトゲ #b1 を得る。",
       " あなたの #yHP が #b50% 以下の間、 #y敏捷性 #b2 を得る。"
     ]
   },
@@ -441,7 +441,7 @@
     "NAME": "聖なるオーラ",
     "FLAVOR": "「人の気持ちが、私にもまだ残っていたなんて……」-ユリナ",
     "DESCRIPTIONS": [
-      "#yダーク #yファイター カードを保留する。",
+      "#y暗黒 #y騎士 カードを保留する。",
       " #b4 ターン目終了時、 #b10 #yブロック を得る。"
     ]
   },
