--- a/localization/jpn/AigisMod-Character-Strings.json
+++ b/localization/jpn/AigisMod-Character-Strings.json
@@ -39,7 +39,7 @@
     ],
     "TEXT": [
       "リビングアーマーとなった戦士は星の声に導かれた。 NL 塔を通じてなにか大切なものを発見するかもしれない。",
-      "あなたは心臓に向かって奥義を使い…",
+      "あなたは心臓に向かって奥義を放ち…",
       "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「騎士よ我らと共に、そして塔の温もりを感じるのだ」"
     ]
   }
