fix careless mistake

--- a/localization/jpn/AigisMod-Card-Strings.json
+++ b/localization/jpn/AigisMod-Card-Strings.json
@@ -3457,7 +3457,7 @@
     ]
   },
   "aigisMod:Sephire2": {
-    "NAME": "Sephire",
+    "NAME": "セフィーレ",
     "DESCRIPTION": "全ての敵に !D! ダメージを与える。 NL aigismod:封印解除 : このカードのコストが1下がる。",
     "UPGRADE_DESCRIPTION": "天賦 NL 全ての敵に !D! ダメージを与える。 NL aigismod:封印解除 : このカードのコストが1下がる。",
     "EXTENDED_DESCRIPTION": [
