--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -18,69 +18,69 @@
   },
 
   "aigisMod:AigisShrine": {
-    "NAME": "Aigis Shrine",
+    "NAME": "埃癸斯神殿",
     "DESCRIPTIONS": [
-      "You come across a familiar shrine. NL It is a manifestation of the Goddess Aigis. NL You can receive a blessing from the Goddess.",
-      "You leave the shrine to continue with your adventure."
+      "你路过了一座熟悉的神殿。 NL 这里是女神埃癸斯的圣所。 NL 你可以选择接受一项女神的祝福。",
+      "你离开了神殿，继续你的旅途。"
     ],
     "OPTIONS": [
-      "[Donate] #gOffer #b100 #gGold #gto #gobtain #ga #gRelic.",
-      "[Pray] #gUpgrade #ga #gCard",
-      "[Summon] #gChoose #b1 #gof #b20 #gCards #gto #gadd #gto #gyour #gDeck.",
-      "[Leave]",
-      "Choose a card to add to your deck.",
-      "[LOCKED] You don't have enough Gold(100).",
-      "[LOCKED] You don't have a card to upgrade.",
-      "Choose a card to upgrade."
+      "[捐赠] #g花费 #b100 #g金币获得遗物。 ",
+      "[祈祷] #g升级一张牌。 ",
+      "[召唤] #g从 #b20 #g张牌中选择 #b1 #g张加入牌组。 ",
+      "[离开]",
+      "选择一张牌加入牌组",
+      "[锁定] 没有足够金币（100）。",
+      "[锁定] 没有可升级的牌。",
+      "选择一张牌升级"
     ]
   },
 
   "aigisMod:MilitaryExercise": {
-    "NAME": "Military Exercise",
+    "NAME": "军队训练",
     "DESCRIPTIONS": [
-      "The Imperial reached the meeting point with the Kingdom army. NL Since there is time before your expedition continues you can spend it to strengthen your army.",
-      "You choose to reorder your units.",
-      "You choose to train with your own army.",
-      "You awakened a new power after this battle."
+      "皇帝一行来到了王国军队的集结点。 NL 在继续探险之前你可以花一点时间强化你的军队。",
+      "你决定重新编排你的军队。",
+      "你决定训练你的军队。",
+      "战斗后，你觉醒了一种新能力。"
     ],
     "OPTIONS": [
-      "[Regroup] #gAdd #ga #gCard to your deck.",
-      "[Train] #gUpgrade #ga #gCard.",
-      "[Fight] #gChallenge #rThe #rPrince.",
-      "[Leave]",
-      "[LOCKED] You don't have any cards to upgrade.",
-      "Choose a card to upgrade",
-      "[Awaken] #gGain #ga #gRelic."
+      "[重组] #g选择一张牌加入牌组。 ",
+      "[训练] #g升级一张牌。 ",
+      "[战斗] #g挑战 #r王子 。 ",
+      "[离开]",
+      "[锁定] 没有可升级的牌。",
+      "选择一张牌升级",
+      "[觉醒] #g获得一个遗物。 "
     ]
   },
 
 
   "aigisMod:CursedGem": {
-    "NAME": "Cursed Gem",
+    "NAME": "诅咒宝石",
     "DESCRIPTIONS": [
-      "Before you lies a dead body, it holds a mysterious gem. NL You also see a gold plated chest in the room. You feel some power coming from the gems, but the chest also has your attention.",
-      "With the gem in your hands now you can identify it comes from a cursed cult. You have the duty to safekeep it, but its power may come in handy.",
-      "As suspected, it is a monsters."
+      "你面前躺着一具尸体，它的手中攥着一颗宝石。 NL 同时旁边还有一个镀金材质的宝箱。你察觉到宝石中蕴含着能量，但宝箱也同样诱人。",
+      "当你拿着宝石，你意识到它的能量来自于一种被诅咒的邪教仪式。你有责任妥善保管，这样力量就能为你所用。",
+      "不出所料，果然是一只怪物。"
     ],
     "OPTIONS": [
-      "[Search] #gExamine #gthe #rgold #rchest?",
-      "[Take the Gem] #gGain #ga #gRelic and #ra #rCurse.",
-      "[Leave]",
-      "[Fight]"
+      "[搜寻] #g检查一下 #r黄金宝箱？ ",
+      "[拿走宝石] #g获得一个遗物 和 #r一张诅咒 。",
+      "[离开]",
+      "[战斗]"
     ]
   },
   "aigisMod:TheVoice": {
-    "NAME": "The Voice",
+    "NAME": "声音",
     "DESCRIPTIONS": [
-      "Navigating trough the floor you suddenly lose your senses and you begin to hear a voice...",
-      "You feel inspired and stronger for some reason.",
-      "You feel a familiar strength within you.",
-      "You should be more aware."
+      "当你跟随导航穿过楼层时，突然你失去了感官，然后逐渐听见了一种声音...",
+      "不知为何你受到了启发，变得更强了。",
+      "你感到有一股熟悉的力量回来了。",
+      "你应该更小心些。"
     ],
     "OPTIONS": [
-      "[The Stars?] #gMax #gHP +8",
-      "[Commander?] #gGain #ga #gRelic",
-      "[Wake Up] Leave"
+      "[星星?] #g获得8点最大生命值。 ",
+      "[指挥官?] #g获得一个遗物。 ",
+      "[醒来] 离开。 "
     ]
   }
 }
