--- a/localization/zhs/AigisMod-Orb-Strings.json
+++ b/localization/zhs/AigisMod-Orb-Strings.json
@@ -1,11 +1,11 @@
 {
   "aigisMod:MeteorOrb": {
-    "NAME": "Meteor Orb",
+    "NAME": "流星充能球",
     "DESCRIPTION": [
-      "#yPassive: When you play a #yMeteor card, increase the damage of this orb by the cost of the played card, then deal #b",
-      " damage to a random enemy.",
-      " NL #yEvoke: Deal #b",
-      " damage to a random enemy."
+      " #y被动 ：每当你打出 #y流星 牌，此充能球的伤害提高其费用点，然后对随机敌人造成 #b",
+      " 点伤害。",
+      " NL #y激发 ：对随机敌人造成 #b",
+      " 点伤害。"
     ]
   }
 }
